--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="assets/css/home_style.css">
-  <title>Kevin Xue's Home Page</title>
+  <title>Kevin Xue, U-M CSE</title>
 </head>
 
 <body>
